<resources>
    <string name="app_name">OnlineDoctor</string>
    <string name="account_login">Account login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_new_account">Register new account</string>
    <string name="register">Register</string>
    <string name="new_user_to_onlinedoctor">New User to OnlineDoctor?</string>
    <string name="already_user">Already a user in OnlineDoctor?</string>
    <string name="go_to_login">Click to Login</string>
    <string name="home">Home</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="appointment">Appointment</string>
    <string name="account">Account</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="pharmacy_fragment">Pharmacy Fragment</string>
    <string name="appointment_fragment">Appointment Fragment</string>
    <string name="account_fragment">Account Fragment</string>
    <string name="previous_appointment">Previous</string>
    <string name="upcoming_appointment">Upcoming</string>
    <string name="add_new_appointment">Book a new appointment</string>
    <string name="space"> </string>
    <string name="provider_detail_description">Board-Certified, Family Medicine</string>
    <string name="provider_detail_language">(Language : English)</string>
    <string name="provider_detail_background">BACKGROUND</string>
    <string name="provider_detail_button">View Availability</string>
    <string name="select_day">Please select a day</string>
    <string name="confirm_date">Confirm selected date</string>
    <string name="title_activity_maps">Map</string>
    <string name="family_member">Family Member</string>
    <string name="call_history">Call History</string>
    <string name="medication">Medication</string>
    <string name="lab_report">Lab Report</string>
    <string name="payment">Payment</string>
    <string name="vaccination">Vaccination</string>
    <string name="monitor">Monitor</string>
    <string name="referral">Referral</string>
    <string name="logout">Logout</string>
    <string name="appointment_text">Your Appointment will be</string>
    <string name="confirm">Confirm</string>
    <string name="thank_you">Thank you  </string>
    <string name="provider_address">Provider Address: </string>
    <string name="confirm_password">Confirm Password</string>
</resources>
