<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="vertical">

        <!--First Row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/account_page_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/account_page_account"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/account_page_family_member"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/account_page_family_member"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/family_member"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/account_page_call_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/account_page_call_history"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/call_history"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <!--Second Row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/account_page_medication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/account_page_medication"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medication"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/account_page_lab_report"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/account_page_lab_report"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lab_report"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/account_page_payment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/account_page_payment"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <!--Third Row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/account_page_vaccination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/account_page_vaccination"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vaccination"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/account_page_monitor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/account_page_monitor"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monitor"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/account_page_referral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/account_page_referral"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/referral"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <!--Fourth Row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/logout_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"/>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</RelativeLayout>