<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/provider_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/provider_fullname"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/colorBlack"
            />

        <TextView
            android:id="@+id/provider_specialty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/provider_provider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/provider_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/provider_detail_description"
            />

        <TextView
            android:id="@+id/provider_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/provider_detail_background" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/provider_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/btn_toTimeSlot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/provider_detail_button" />

    </LinearLayout>

</ScrollView>